--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ pre-release-commit-message = "Release {{crate_name}} version {{version}}"
 extism-pdk = "1.2.1"
 hank-types = "0.1.0"
 prost = "0.13.2"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
