--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ hank-types = "0.1.50"
 prost = "0.13.2"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+uuid = { version = "1.11.0", features = ["v4"] }
