--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 pre-release-commit-message = "Release {{crate_name}} version {{version}}"
 
 [dependencies]
+chrono = "0.4.38"
 extism-manifest = "1.6.0"
 extism-pdk = "1.2.1"
 hank-types = "0.1.50"
